fixed relative image link bug; added PDF icons to PDF links, 508 fixes (contrast)

--- a/src/static/css/module/form-resources.less
+++ b/src/static/css/module/form-resources.less
@@ -21,6 +21,7 @@
         p {
             text-transform: none;
             text-align: left;
+            color: @darkgray;
         }
 
         &_wrapper {
@@ -94,21 +95,21 @@
 
         .respond-to-max(660px, {
             .hero_img {
-                background-image:url('/static/img/form-resources_mortgage-closing-hero-small.png');
+                background-image:url('../img/form-resources_mortgage-closing-hero-small.png');
                 background-size: 320px 170px;
             }
         });
 
         .respond-to-min(661px, {
             .hero_wrapper {
-                background-image:url('/static/img/form-resources_mortgage-closing-hero-medium.png');
+                background-image:url('../img/form-resources_mortgage-closing-hero-medium.png');
                 background-size: 400px 260px;
             }
         });
 
         .respond-to-min(992px, {
             .hero_wrapper {
-                background-image:url('/static/img/form-resources_mortgage-closing-hero-large.png');
+                background-image:url('../img/form-resources_mortgage-closing-hero-large.png');
                 background-size: 730px 372px;
               }
         });
@@ -119,21 +120,21 @@
 
         .respond-to-max(660px, {
             .hero_img {
-                background-image:url('/static/img/form-resources_mortgage-estimate-hero-small.png');
+                background-image:url('../img/form-resources_mortgage-estimate-hero-small.png');
                 background-size: 320px 170px;
             }
         });
 
         .respond-to-min(661px, {
             .hero_wrapper {
-                background-image:url('/static/img/form-resources_mortgage-estimate-hero-medium.png');
+                background-image:url('../img/form-resources_mortgage-estimate-hero-medium.png');
                 background-size: 400px 310px;
             }
         });
 
         .respond-to-min(992px, {
             .hero_wrapper {
-                background-image:url('/static/img/form-resources_mortgage-estimate-hero-large.png');
+                background-image:url('../img/form-resources_mortgage-estimate-hero-large.png');
                 background-size: 730px 425px;
               }
         });
